clusters/default/default/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: default
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          ports:
            - containerPort: 80
          command: [ "sh", "-c" ]
          args:
            - NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider npm-run-all --parallel build start --no-lint
          volumeMounts:
            - mountPath: /app/config
              name: dashy-config
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
---
