clusters/default/default/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
spec:
  selector:
    app: dashy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: ClusterIP
