clusters/default/default/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dashy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 80
